--- a/src/app/pages/facturas-list/facturas-list.component.html
+++ b/src/app/pages/facturas-list/facturas-list.component.html
@@ -13,7 +13,7 @@
 
       <ng-container matColumnDef="Numero">
         <th mat-header-cell *matHeaderCellDef> Numero</th>
-        <td mat-cell *matCellDef="let factura"> {{ factura.id }} </td>
+        <td mat-cell *matCellDef="let factura"> {{ factura.numero }} </td>
       </ng-container>
 
       <ng-container matColumnDef="Fecha">
@@ -28,12 +28,12 @@
 
       <ng-container matColumnDef="Ticket">
         <th mat-header-cell *matHeaderCellDef> Ticket</th>
-        <td mat-cell *matCellDef="let factura"> {{ factura.ticket }} </td>
+        <td mat-cell *matCellDef="let factura"> {{ factura.ticket.id }} </td>
       </ng-container>
 
       <ng-container matColumnDef="Tarifa">
         <th mat-header-cell *matHeaderCellDef> Tarifa</th>
-        <td mat-cell *matCellDef="let factura"> {{ factura.tarifa }} </td>
+        <td mat-cell *matCellDef="let factura"> {{ factura.tarifa.id }} </td>
       </ng-container>
 
       <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
