--- a/src/app/pages/ayuda/ayuda.component.html
+++ b/src/app/pages/ayuda/ayuda.component.html
@@ -10,7 +10,7 @@
         <img src="assets/p2.jpeg" alt="Marcar Entrada/Salida" width="700px">
         <li>Completa los datos solicitados.</li>
         <img src="assets/p3.jpeg" alt="Marcar Entrada/Salida" width="700px">
-        <li>Haz clic en el botón "Guardar" para registrar la entrada de tu vehículo en el parqueadero.</li>
+        <li>Haz clic en el botón "Registrar" para registrar la entrada de tu vehículo en el parqueadero.</li>
         <img src="assets/p4.jpeg" alt="Marcar Entrada/Salida" width="700px">
       </ol>
     </mat-card-content>
