--- a/src/app/pages/parqueadero/parqueadero.component.css
+++ b/src/app/pages/parqueadero/parqueadero.component.css
@@ -3,3 +3,8 @@
     background-color: #007bff;
     color: white;
 }
+
+.button-marcar button{
+    background-color: #007bff;
+    color: white;
+}
