--- a/src/app/pages/parqueadero/parqueadero.component.html
+++ b/src/app/pages/parqueadero/parqueadero.component.html
@@ -32,7 +32,7 @@
       <!-- Columna Marca -->
       <ng-container matColumnDef="Entrada">
         <th mat-header-cell *matHeaderCellDef> Hora Entrada </th>
-        <td mat-cell *matCellDef="let ticket"> {{ ticket.horaEntrada }} </td>
+        <td mat-cell *matCellDef="let ticket"> {{  formatDateTime(ticket.horaEntrada) }} </td>
       </ng-container>
 
 
@@ -46,9 +46,12 @@
           <!-- Verificar si ticket.horaSalida es null o vacío -->
           <ng-container *ngIf="!ticket.horaSalida; else mostrarHoraSalida">
             <!-- Botón "Marcar Salida" con el evento click que llama a la función editVehiculo(vehiculo) -->
-            <button mat-button (click)="goToFacture(ticket)">Marcar Salida</button>
+            <div class="button-marcar">
+              <button  mat-raised-button  (click)="goToFacture(ticket)">Marcar Salida</button>
+            </div>
+           
           </ng-container>
-          <ng-template #mostrarHoraSalida>{{ ticket.horaSalida }}</ng-template>
+          <ng-template #mostrarHoraSalida>{{  formatDateTime(ticket.horaSalida) }}</ng-template>
         </td>
       </ng-container>
       
