--- a/src/app/components/dashboard/dashboard.component.html
+++ b/src/app/components/dashboard/dashboard.component.html
@@ -8,7 +8,7 @@
                     <li><a routerLink="pages/inicio">Inicio</a></li>
                     <li><a routerLink="pages/parqueadero">Marcar Entrada/Salida</a></li>
                     <li><a routerLink="pages/tarifas-list">Tarifas</a></li>
-                    <li><a routerLink="pages/facturas-list">Lista de Facturas</a></li>
+                    <li><a routerLink="pages/facturas-list">Ver historial</a></li>
                     <li><a routerLink="pages/acercade">Acerca De</a></li>
                     <li><a routerLink="pages/ayuda">Ayuda</a></li>
                     
