--- a/src/app/pages/facturas-list/facturas-list.component.html
+++ b/src/app/pages/facturas-list/facturas-list.component.html
@@ -6,34 +6,44 @@
   <div class="mat-elevation-z8">
     <table mat-table [dataSource]="facturaList" matSort>
       <!-- Verifica que el identificador de columna sea "Placa" -->
-      <ng-container matColumnDef="Id">
-        <th mat-header-cell *matHeaderCellDef> Id</th>
-        <td mat-cell *matCellDef="let factura"> {{ factura.id }} </td>
-      </ng-container>
-
       <ng-container matColumnDef="Numero">
         <th mat-header-cell *matHeaderCellDef> Numero</th>
         <td mat-cell *matCellDef="let factura"> {{ factura.numero }} </td>
       </ng-container>
 
-      <ng-container matColumnDef="Fecha">
-        <th mat-header-cell *matHeaderCellDef> Fecha</th>
-        <td mat-cell *matCellDef="let factura"> {{ factura.fecha }} </td>
+      <ng-container matColumnDef="Placa">
+        <th mat-header-cell *matHeaderCellDef> Placa</th>
+        <td mat-cell *matCellDef="let factura"> {{ factura.ticket.vehiculo.placa }} </td>
       </ng-container>
 
-      <ng-container matColumnDef="Total">
-        <th mat-header-cell *matHeaderCellDef> Total</th>
-        <td mat-cell *matCellDef="let factura"> {{ factura.total }} </td>
+      <ng-container matColumnDef="Cedula">
+        <th mat-header-cell *matHeaderCellDef> Cedula</th>
+        <td mat-cell *matCellDef="let factura"> {{ factura.ticket.vehiculo.cedula }} </td>
       </ng-container>
 
-      <ng-container matColumnDef="Ticket">
-        <th mat-header-cell *matHeaderCellDef> Ticket</th>
-        <td mat-cell *matCellDef="let factura"> {{ factura.ticket.id }} </td>
+      <ng-container matColumnDef="Entrada">
+        <th mat-header-cell *matHeaderCellDef> Entrada</th>
+        <td mat-cell *matCellDef="let factura"> {{ formatDateTime(factura.ticket.horaEntrada) }} </td>
+      </ng-container>
+
+      <ng-container matColumnDef="Salida">
+        <th mat-header-cell *matHeaderCellDef> Salida</th>
+        <td mat-cell *matCellDef="let factura">  {{ formatDateTime(factura.ticket.horaSalida) }} </td>
+      </ng-container>
+
+      <ng-container matColumnDef="Tiempo Parqueo">
+        <th mat-header-cell *matHeaderCellDef> Tiempo Parqueo</th>
+        <td mat-cell *matCellDef="let factura"> {{ convertirAMinutosYHoras(factura.ticket.tiempoParqueo) }} </td>
       </ng-container>
 
       <ng-container matColumnDef="Tarifa">
         <th mat-header-cell *matHeaderCellDef> Tarifa</th>
-        <td mat-cell *matCellDef="let factura"> {{ factura.tarifa.id }} </td>
+        <td mat-cell *matCellDef="let factura"> ${{ factura.tarifa.precioHora }}/hora </td>
+      </ng-container>
+
+      <ng-container matColumnDef="Total">
+        <th mat-header-cell *matHeaderCellDef> Total</th>
+        <td mat-cell *matCellDef="let factura"> ${{ factura.total }} </td>
       </ng-container>
 
       <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
