Manual de Usuario Marcar Salida

--- a/src/app/pages/ayuda/ayuda.component.html
+++ b/src/app/pages/ayuda/ayuda.component.html
@@ -15,19 +15,38 @@
       </ol>
     </mat-card-content>
   </mat-card>
-  
+  <hr>
   <mat-card class="marcar-salida">
     <mat-card-title>Marcar Salida</mat-card-title>
     <mat-card-content>
       <p>Para marcar la salida de tu vehículo:</p>
       <ol>
-        <li>Ingresa a la sección de "Marcar Entrada/Salida" en el menú principal.</li>
-        <li>Busca la entrada de tu vehículo en la lista de registros.</li>
-        <li>Haz clic en el botón "Marcar Salida" para registrar la salida de tu vehículo del parqueadero.</li>
+        <li>Ingresa a la sección de "Marcar Entrada/Salida" en el menú principal.Despues damos click en Marcar Salida</li>
+        <img src="assets/e1.jpeg" alt="Marcar Entrada/Salida" width="700px">
+        <li>Observa los datos del Ticket creado y cuanto sera el Valor a pagar .Al final click en el boton  Guardar</li>
+        <img src="assets/e2.jpeg" alt="Marcar Entrada/Salida" width="700px">
+        <li>Se Observa que se actualizo la salida</li>
+        <img src="assets/e3.jpeg" alt="Marcar Entrada/Salida" width="700px">
+      </ol>
+    </mat-card-content>
+  </mat-card>
+  <hr>
+  <mat-card class="mostrar-facturas">
+    <mat-card-title>Lista de Facturas</mat-card-title>
+    <mat-card-content>
+      <p>Para visualizar la lista de facturas:</p>
+      <ol>
+        <li>Ingresa a la sección de "Ver Historial" en el menú principal.</li>
+        <img src="assets/e4.jpeg" alt="Marcar Entrada/Salida" width="700px">
+
+        <li>Observa la lista de facturas generadas con sus detalles.</li>
+
       </ol>
     </mat-card-content>
   </mat-card>
   
+
+  <hr>
   <mat-card class="consultar-tarifa">
     <mat-card-title>Consultar Tarifa</mat-card-title>
     <mat-card-content>
