--- a/src/app/pages/tarifas-add/tarifas-add.component.html
+++ b/src/app/pages/tarifas-add/tarifas-add.component.html
@@ -41,7 +41,7 @@
           
         <br/>
 
-          <button mat-raised-button type="submit" class="custom-mat-button"  (click)="openSnackBar()">Guardar</button>
+          <button mat-raised-button type="submit" class="custom-mat-button">Guardar</button>
           
 
     </form>
