Imagen de lista facturas en el manual de usuario

--- a/src/app/pages/ayuda/ayuda.component.html
+++ b/src/app/pages/ayuda/ayuda.component.html
@@ -40,7 +40,7 @@
         <img src="assets/e4.jpeg" alt="Marcar Entrada/Salida" width="700px">
 
         <li>Observa la lista de facturas generadas con sus detalles.</li>
-
+        <img src="assets/lista.png" alt="Marcar Entrada/Salida" width="700px">
       </ol>
     </mat-card-content>
   </mat-card>
