campo cedula en Marcar Salida validado

--- a/src/app/components/header/header.component.html
+++ b/src/app/components/header/header.component.html
@@ -22,7 +22,7 @@
             </a>
           </div>
           <div class="example-button-container">
-            <a mat-mini-fab class="mat-button-disabled" aria-label="Example icon button with a filter list icon" routerLink="pages/tarifas-list">
+            <a mat-mini-fab class="mat-button-disabled" aria-label="Example icon button with a filter list icon" routerLink="pages/facturas-list">
               <mat-icon>filter_list</mat-icon>
             </a>
           </div>
