--- a/src/app/pages/tarifas-add/tarifas-add.component.html
+++ b/src/app/pages/tarifas-add/tarifas-add.component.html
@@ -2,7 +2,10 @@
   <mat-card>
     <mat-card-content> 
      <h3>Informacion tarifas</h3>
-      <p> informacion calculo fraccion hora </p>
+      <p> La fracción de hora es el período más corto por el cual se puede cobrar el estacionamiento. En este sistema se ha
+        establecido que la fracción de hora se especificque en minutos (1 ,10, 15, 30) Esto significa que cada vez que se ingrese al parqueadero, se
+        realizará un cálculo del tiempo exacto  y solo se cobrará por los intervalos de fraccion de hora.
+       </p>
     </mat-card-content>
   </mat-card>
 
