--- a/src/app/pages/facturas-add/facturas-add.component.html
+++ b/src/app/pages/facturas-add/facturas-add.component.html
@@ -22,7 +22,7 @@
 
         <mat-form-field>
           <mat-label>Cédula</mat-label>
-          <input matInput [(ngModel)]="ticket.vehiculo.cedula" type="text" name="cedula">
+          <input matInput [(ngModel)]="ticket.vehiculo.cedula" type="text" name="cedula"  (keydown)="onKeyDown2($event)" maxlength="10"  >
         </mat-form-field>
   
         <mat-form-field>
