--- a/src/app/pages/facturas-list/facturas-list.component.html
+++ b/src/app/pages/facturas-list/facturas-list.component.html
@@ -16,10 +16,22 @@
         <td mat-cell *matCellDef="let factura"> {{ factura.ticket.vehiculo.placa }} </td>
       </ng-container>
 
-      <ng-container matColumnDef="Cedula">
+      <!-- <ng-container matColumnDef="Cedula">
         <th mat-header-cell *matHeaderCellDef> Cedula</th>
         <td mat-cell *matCellDef="let factura"> {{ factura.ticket.vehiculo.cedula }} </td>
+      </ng-container> -->
+
+      <ng-container matColumnDef="Cedula">
+        <th mat-header-cell *matHeaderCellDef> Cedula</th>
+        <td mat-cell *matCellDef="let factura">
+          <!-- Condición para mostrar el valor de la cédula o "Consumidor final" si está vacío -->
+          <ng-container *ngIf="factura.ticket.vehiculo.cedula; else mostrarConsumidoFinal">
+            {{ factura.ticket.vehiculo.cedula }}
+          </ng-container>
+          <ng-template #mostrarConsumidoFinal>Consumidor final</ng-template>
+        </td>
       </ng-container>
+      
 
       <ng-container matColumnDef="Entrada">
         <th mat-header-cell *matHeaderCellDef> Entrada</th>
