--- a/src/app/pages/vehiculos-add/vehiculos-add.component.html
+++ b/src/app/pages/vehiculos-add/vehiculos-add.component.html
@@ -2,7 +2,7 @@
   <form action="" class="vehiculo-form" #vehiculoForm="ngForm" (ngSubmit)="checkDataForm()">
     <!-- Columna Placa -->
     <!-- Campo Marca -->
-    <h2>Registrar vehiculo</h2>
+    <h2>Registrar Entrada del vehiculo</h2>
     <mat-form-field>
       <mat-label>Placa</mat-label>
       <input matInput [(ngModel)]="vehiculo.placa" type="text" name="placa" (input)="formatPlaca()" (keydown)="onKeyDown($event)" required>
