--- a/src/app/pages/facturas-list/facturas-list.component.html
+++ b/src/app/pages/facturas-list/facturas-list.component.html
@@ -32,6 +32,10 @@
         </td>
       </ng-container>
       
+      <ng-container matColumnDef="Nombre">
+        <th mat-header-cell *matHeaderCellDef> Nombre</th>
+        <td mat-cell *matCellDef="let factura"> {{ factura.ticket.vehiculo.nombre}} </td>
+      </ng-container>
 
       <ng-container matColumnDef="Entrada">
         <th mat-header-cell *matHeaderCellDef> Entrada</th>
